--- a/src/classes/CriterionEvaluatorTest.cls
+++ b/src/classes/CriterionEvaluatorTest.cls
@@ -39,10 +39,16 @@ public with sharing class CriterionEvaluatorTest {
     	NumericCriterionEvaluator numEvaluator = new NumericCriterionEvaluator();
     	System.assertEquals(true, numEvaluator.equals(4, 4));
     	System.assertEquals(true, numEvaluator.notEquals(4, 3));
-    	System.assertEquals(true, numEvaluator.greater(4, 3));
+    	System.assertEquals(true, numEvaluator.greater(4, null ));
+        System.assertEquals(true, numEvaluator.greater(4, 3 ));
     	System.assertEquals(true, numEvaluator.lessThan(3, 4));
+        System.assertEquals(false, numEvaluator.lessThan(3, null));
     	System.assertEquals(true, numEvaluator.lessOrEquals(4, 4));
+        System.assertEquals(false, numEvaluator.lessOrEquals(4, null));
+        System.assertEquals(true, numEvaluator.lessOrEquals(0, null));
     	System.assertEquals(true, numEvaluator.greaterOrEquals(4, 4));
+        System.assertEquals(true, numEvaluator.greaterOrEquals(0, null));
+        System.assertEquals(true, numEvaluator.greaterOrEquals(4, null));
     	System.assertEquals(false, numEvaluator.contains(1, 1));
     	System.assertEquals(false, numEvaluator.startWith(1, 1));
     	System.assertEquals(false, numEvaluator.notContains(1, 1));
